--- a/gtk/xdgmime/ChangeLog
+++ b/gtk/xdgmime/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* xdgmime.c (xdg_mime_get_mime_type_for_file): Remove
+	a debugging printf.
+
 2005-09-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* xdgmime.h:
