--- a/gtk/xdgmime/ChangeLog
+++ b/gtk/xdgmime/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-18  Matthias Clasen  <mclasen@redhat.com>
+
+	* xdgmimecache.c: Make magic comparisons work correctly
+	in the cache.
+
 2005-10-17  Matthias Clasen  <mclasen@redhat.com>
 
 	* xdgmime.c (xdg_mime_get_mime_type_for_file): Remove
