--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-20  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2005-10-17  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Fixed translations with context (thanks to Sergej Chodarev).
