Updated Bulgarian translation by Alexander Shopov <ash@contact.bg>
2005-10-21  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Alexander Shopov <ash@contact.bg>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-21  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Alexander Shopov <ash@contact.bg>
+
 2005-10-20  Runa Bhattacharjee  <runa@bengalinux.org>
 
 	* bn.po: Updated Bengali (bn) Translation
