--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-23  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2005-10-21  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
