--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-23  Ilkka Tuohela  <hile@iki.fi>
+	
+	* fi.po: Updated Finnish translation
+
 2005-10-21  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
