--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-23  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-10-23  Ilkka Tuohela  <hile@iki.fi>
 	
 	* fi.po: Updated Finnish translation
