--- a/po/he.po
+++ b/po/he.po
@@ -1,16 +1,4 @@
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
-# translation of gtk+.HEAD.he.po to Hebrew
+
 # translation of gtk+.HEAD.he.po to Hebrew
 # Hebrew Translation for GTK+ - תרגום עברי ל-
 # Copyright (C) 2000,2002, 2004 Free Software Foundation, Inc.
@@ -869,47 +857,47 @@ msgstr "פורמט התמונה XPM"
 #. Description of --class=CLASS in --help output
 #: gdk/gdk.c:115
 msgid "Program class as used by the window manager"
-msgstr ""
+msgstr "Program class as used by the window manager"
 
 #. Placeholder in --class=CLASS in --help output
 #: gdk/gdk.c:116
 msgid "CLASS"
-msgstr ""
+msgstr "CLASS"
 
 #. Description of --name=NAME in --help output
 #: gdk/gdk.c:118
 msgid "Program name as used by the window manager"
-msgstr ""
+msgstr "Program name as used by the window manager"
 
 #. Placeholder in --name=NAME in --help output
 #: gdk/gdk.c:119
 msgid "NAME"
-msgstr ""
+msgstr "NAME"
 
 #. Description of --display=DISPLAY in --help output
 #: gdk/gdk.c:121
 msgid "X display to use"
-msgstr ""
+msgstr "X display to use"
 
 #. Placeholder in --display=DISPLAY in --help output
 #: gdk/gdk.c:122
 msgid "DISPLAY"
-msgstr ""
+msgstr "DISPLAY"
 
 #. Description of --screen=SCREEN in --help output
 #: gdk/gdk.c:124
 msgid "X screen to use"
-msgstr ""
+msgstr "X screen to use"
 
 #. Placeholder in --screen=SCREEN in --help output
 #: gdk/gdk.c:125
 msgid "SCREEN"
-msgstr ""
+msgstr "SCREEN"
 
 #. Description of --gdk-debug=FLAGS in --help output
 #: gdk/gdk.c:128
 msgid "Gdk debugging flags to set"
-msgstr ""
+msgstr "Gdk debugging flags to set"
 
 #. Placeholder in --gdk-debug=FLAGS in --help output
 #. Placeholder in --gdk-no-debug=FLAGS in --help output
@@ -917,12 +905,12 @@ msgstr ""
 #. Placeholder in --gtk-no-debug=FLAGS in --help output
 #: gdk/gdk.c:129 gdk/gdk.c:132 gtk/gtkmain.c:416 gtk/gtkmain.c:419
 msgid "FLAGS"
-msgstr ""
+msgstr "FLAGS"
 
 #. Description of --gdk-no-debug=FLAGS in --help output
 #: gdk/gdk.c:131
 msgid "Gdk debugging flags to unset"
-msgstr ""
+msgstr "Gdk debugging flags to unset"
 
 #: gdk/keyname-table.h:3940
 msgid "keyboard label|BackSpace"
@@ -1579,9 +1567,8 @@ msgid ""
 msgstr ""
 
 #: gtk/gtkfilechooserdefault.c:6217
-#, fuzzy
 msgid "_Replace"
-msgstr "_שנה שם"
+msgstr "ה_חלף"
 
 #: gtk/gtkfilechooserdefault.c:6708
 #, c-format
@@ -1858,7 +1845,6 @@ msgstr "מערכת הקבצים הזו אינה תומכת בחיבורים"
 # hebrew note: "תיקיה" is "folder", but there is no better word for
 # "directory"
 #: gtk/gtkfilesystemunix.c:639
-#, fuzzy
 msgid "File System"
 msgstr "מערכת קבצים"
 
@@ -2068,27 +2054,27 @@ msgstr "בחר הכל"
 #. Description of --gtk-module=MODULES in --help output
 #: gtk/gtkmain.c:409
 msgid "Load additional GTK+ modules"
-msgstr ""
+msgstr "Load additional GTK+ modules"
 
 #. Placeholder in --gtk-module=MODULES in --help output
 #: gtk/gtkmain.c:410
 msgid "MODULES"
-msgstr ""
+msgstr "MODULES"
 
 #. Description of --g-fatal-warnings in --help output
 #: gtk/gtkmain.c:412
 msgid "Make all warnings fatal"
-msgstr ""
+msgstr "Make all warnings fatal"
 
 #. Description of --gtk-debug=FLAGS in --help output
 #: gtk/gtkmain.c:415
 msgid "GTK+ debugging flags to set"
-msgstr ""
+msgstr "GTK+ debugging flags to set"
 
 #. Description of --gtk-no-debug=FLAGS in --help output
 #: gtk/gtkmain.c:418
 msgid "GTK+ debugging flags to unset"
-msgstr ""
+msgstr "GTK+ debugging flags to unset"
 
 #. Translate to default:RTL if you want your widgets
 #. * to be RTL, otherwise translate to default:LTR.
@@ -2101,11 +2087,11 @@ msgstr "default:RTL"
 
 #: gtk/gtkmain.c:585
 msgid "GTK+ Options"
-msgstr ""
+msgstr "GTK+ Options"
 
 #: gtk/gtkmain.c:585
 msgid "Show GTK+ Options"
-msgstr ""
+msgstr "Show GTK+ Options"
 
 #: gtk/gtknotebook.c:2718 gtk/gtknotebook.c:5062
 #, c-format
