--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkfilechooser.c (gtk_file_chooser_class_init): Fix whitespace
+	in a blurb.  (#319499, Francisco Javier F. Serrador)
+
 2005-10-24  Matthias Clasen  <mclasen@redhat.com>
 
 	Add settings to hide the input method and Unicode control character
