Don't use deprecated functions in examples. (#319524, Vincent Untz)
2005-10-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tmpl/gtkfilechooser.sgml: Don't use deprecated functions
	in examples.  (#319524, Vincent Untz)

	* gtk/gtk-update-icon-cache.xml: Fix a typo.  (#319524, Vincent Untz)

--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,10 @@
+2005-10-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtkfilechooser.sgml: Don't use deprecated functions
+	in examples.  (#319524, Vincent Untz)
+
+	* gtk/gtk-update-icon-cache.xml: Fix a typo.  (#319524, Vincent Untz)
+
 2005-10-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtk-sections.txt: Add gtk_text_buffer_get_has_selection().
