--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-25  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/x11/gdkxftdefaults.c (init_xft_settings): Make the 
+	initialization of screen_x11->xft_rgba more explicit.  (#319627,
+	Bogdan Nicula)
+
 	* gtk/gtkfilechooser.c (gtk_file_chooser_class_init): Fix whitespace
 	in a blurb.  (#319499, Francisco Javier F. Serrador)
 
