--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-10-26  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkfilesystem.c (gtk_file_system_module_load): 
+	* gtk/gtkthemes.c (gtk_theme_engine_load): 
+	* gtk/gtkimmodule.c (gtk_im_module_load): Use G_MODULE_BIND_LAZY
+	when dlopening modules.  (#319557, Laszlo Peter)
+
+2005-10-26  Matthias Clasen  <mclasen@redhat.com>
+
 	* gtk/gtktextbtree.c (gtk_text_btree_resolve_bidi): Only use text
 	segments when determining text direction.  (#319065, Tommi Komulainen)
 
