--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-27  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2005-10-26  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Fixed typos reported by 
