--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-28  Ankit Patel  <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 2005-10-27  Dan Damian  <dand@gnome.ro>
 
 	* ro.po: Updated Romanian translation by Misu Moldovan.
