--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-28  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktreeview.c (gtk_tree_view_search_entry_flush_timeout): Return
+	FALSE, so we don't flush repeatedly.  (#319151, Alexander Larsson)
+
 2005-10-26  Michael Natterer  <mitch@imendio.com>
 
 	Fix bug #319974:
